--- a/portfolio.html
+++ b/portfolio.html
@@ -26,37 +26,35 @@
     <header class="heder">
       <div class="container heder__container">
         <!-- Logo -->
-        <div class="bloc">
-          <a href="./index.html" class="logo bloc__logo link">
-            <span class="logo__icon">Web</span>Studio
-          </a>
-        </div>
+        <a href="./index.html" class="logo heder__logo link">
+         <span class="heder__logo-icon">Web</span>Studio
+       </a>
         <!-- Site nav -->
-        <nav class="navigation">
-          <ul class="menu list">
-            <li class="menu__item">
+        <nav class="nav heder__nav">
+          <ul class="nav__list list">
+            <li class="nav__item">
               <a
-                class="menu__link"
+                class="nav__link"
                 href="./index.html"
                 >Студія</a
               >
             </li>
-            <li class="menu__item">
-              <a class="menu__link menu__link__line link current" href="./portfolio.html">Портфоліо</a>
+            <li class="nav__item">
+              <a class="nav__link nav__link__line link current" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="menu__item">
-              <a class="menu__link" href="">Контакти</a>
+            <li class="nav__item">
+              <a class="nav__link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
         <!-- Site contacts -->
-        <ul class="contacts list">
+        <ul class="contacts heder__contacts list">
           <li class="contacts__item">
             <a class="contacts__link link" href="mailto:info@devstudio.com">
               <svg class="contacts__icon" width="16" height="12">
                 <use
                   class="contackts__use"
-                  href="./img-svg/icons.svg#mail.svg"
+                  href="./images/icons.svg#mail.svg"
                 ></use>
               </svg>
               info@devstudio.com
@@ -65,7 +63,7 @@
           <li class="contacts__item">
             <a class="contacts__link link" href="tel:+380961111111">
               <svg class="contacts__icon" width="10" height="16">
-                <use href="./img-svg/icons.svg#phone.svg"></use>
+                <use href="./images/icons.svg#phone.svg"></use>
               </svg>
               +380961111111
             </a>
@@ -324,28 +322,28 @@
               <li class="soc__item">
                 <a href="" class="soc__link list">
                   <svg class="soc__icon" width="20" height="20">
-                    <use href="./img-svg/icons.svg#icon-instagram.svg"></use>
+                    <use href="./images/icons.svg#icon-instagram.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="soc__item">
                 <a href="" class="soc__link list">
                   <svg class="soc__icon" width="20" height="20">
-                    <use href="./img-svg/icons.svg#icon-twitter.svg"></use>
+                    <use href="./images/icons.svg#icon-twitter.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="soc__item">
                 <a href="" class="soc__link list">
                   <svg class="soc__icon" width="20" height="20">
-                    <use href="./img-svg/icons.svg#icon-facebook.svg"></use>
+                    <use href="./images/icons.svg#icon-facebook.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="soc__item">
                 <a href="" class="soc__link list">
                   <svg class="soc__icon" width="20" height="20">
-                    <use href="./img-svg/icons.svg#icon-linkedin.svg"></use>
+                    <use href="./images/icons.svg#icon-linkedin.svg"></use>
                   </svg>
                 </a>
               </li>
@@ -364,7 +362,7 @@
               <button class="subscription__btn">
                 Підписатися
                 <svg class="subscription__svg">
-                  <use href="./img-svg/icons.svg#icon-send"></use>
+                  <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </button>
             </form>
