--- a/index.html
+++ b/index.html
@@ -25,37 +25,35 @@
     <header class="heder">
       <div class="container heder__container">
         <!-- Logo -->
-        <div class="bloc">
-          <a href="./index.html" class="logo bloc__logo link">
-            <span class="logo__icon">Web</span>Studio
-          </a>
-        </div>
+        <a href="./index.html" class="logo heder__logo link">
+         <span class="heder__logo-icon">Web</span>Studio
+       </a>
         <!-- Site nav -->
-        <nav class="navigation">
-          <ul class="menu list">
-            <li class="menu__item">
+        <nav class="nav heder__nav">
+          <ul class="nav__list list">
+            <li class="nav__item">
               <a
-                class="menu__link menu__link__line link current"
+                class="nav__link nav__link__line link current"
                 href="./index.html"
                 >Студія</a
               >
             </li>
-            <li class="menu__item">
-              <a class="menu__link" href="./portfolio.html">Портфоліо</a>
+            <li class="nav__item">
+              <a class="nav__link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="menu__item">
-              <a class="menu__link" href="">Контакти</a>
+            <li class="nav__item">
+              <a class="nav__link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
         <!-- Site contacts -->
-        <ul class="contacts list">
+        <ul class="contacts heder__contacts list">
           <li class="contacts__item">
             <a class="contacts__link link" href="mailto:info@devstudio.com">
               <svg class="contacts__icon" width="16" height="12">
                 <use
                   class="contackts__use"
-                  href="./img-svg/icons.svg#mail.svg"
+                  href="./images/icons.svg#mail.svg"
                 ></use>
               </svg>
               info@devstudio.com
@@ -64,7 +62,7 @@
           <li class="contacts__item">
             <a class="contacts__link link" href="tel:+380961111111">
               <svg class="contacts__icon" width="10" height="16">
-                <use href="./img-svg/icons.svg#phone.svg"></use>
+                <use href="./images/icons.svg#phone.svg"></use>
               </svg>
               +380961111111
             </a>
@@ -77,8 +75,8 @@
       <!-- Hero -->
       <section class="hero hero__overley">
         <div class="container hero__container list">
-          <h1 class="container__title list">Ефективні рішення для вашого бізнесу</h1>
-          <button class="container__button" type="button" data-modal-open>
+          <h1 class="hero__title list">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero__button" type="button" data-modal-open>
             Замовити послугу
           </button>
         </div>
@@ -87,30 +85,30 @@
       <section class="advantage">
         <div class="container">
           <h2 class="visually-hidden">Переваги</h2>
-          <ul class="container__advantage list">
-            <li class="container__advantage-list icon-antena">
-              <h3 class="container__advantage-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-              <p class="container__advantage-text">
+          <ul class="advantage__list list">
+            <li class="advantage__item icon-antena">
+              <h3 class="advantage__title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="advantage__text">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="container__advantage-list icon-clock">
-              <h3 class="container__advantage_-itle">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="container__advantage-text">
+            <li class="advantage__item icon-clock">
+              <h3 class="advantage__title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="advantage__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
-            <li class="container__advantage-list icon-vector">
-              <h3 class="container__advantage-title">ПЛАНУВАННЯ</h3>
-              <p class="container__advantage-text">
+            <li class="advantage__item icon-vector">
+              <h3 class="advantage__title">ПЛАНУВАННЯ</h3>
+              <p class="advantage__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="container__advantage-list icon-astronaut">
-              <h3 class="container__advantage-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-              <p class="container__advantage-text">
+            <li class="advantage__item icon-astronaut">
+              <h3 class="advantage__title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="advantage__text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -121,9 +119,9 @@
       <!-- Work -->
       <section class="work">
         <div class="container ">
-          <h2 class="container__work-title">Чим ми займаємося</h2>
-          <ul class="container__work">
-            <li class="container__work-list list">
+          <h2 class="work__title">Чим ми займаємося</h2>
+          <ul class="work__list">
+            <li class="work__item list">
               <img
                 class="container__work-img"
                 src="./images/work1img.jpeg"
@@ -132,7 +130,7 @@
                 height="294"
               />
             </li>
-            <li class="container__work-list list">
+            <li class="work__item list">
               <img
                 class="container__work-img"
                 src="./images/work2img.jpeg"
@@ -141,7 +139,7 @@
                 height="294"
               />
             </li>
-            <li class="container__work-list list">
+            <li class="work__item list">
               <img
                 class="container__work-img"
                 src="./images/work3img.jpeg"
@@ -174,7 +172,7 @@
                     <a href="" class="team__soc-link link">
                       <svg class="team__soc-icon" width="20" height="20">
                         <use
-                          href="./img-svg/icons.svg#icon-instagram.svg"
+                          href="./images/icons.svg#icon-instagram.svg"
                         ></use>
                       </svg>
                     </a>
@@ -182,21 +180,21 @@
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-twitter.svg"></use>
+                        <use href="./images/icons.svg#icon-twitter.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-facebook.svg"></use>
+                        <use href="./images/icons.svg#icon-facebook.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-linkedin.svg"></use>
+                        <use href="./images/icons.svg#icon-linkedin.svg"></use>
                       </svg>
                     </a>
                   </li>
@@ -219,7 +217,7 @@
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
                         <use
-                          href="./img-svg/icons.svg#icon-instagram.svg"
+                          href="./images/icons.svg#icon-instagram.svg"
                         ></use>
                       </svg>
                     </a>
@@ -227,21 +225,21 @@
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-twitter.svg"></use>
+                        <use href="./images/icons.svg#icon-twitter.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-facebook.svg"></use>
+                        <use href="./images/icons.svg#icon-facebook.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-linkedin.svg"></use>
+                        <use href="./images/icons.svg#icon-linkedin.svg"></use>
                       </svg>
                     </a>
                   </li>
@@ -264,7 +262,7 @@
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
                         <use
-                          href="./img-svg/icons.svg#icon-instagram.svg"
+                          href="./images/icons.svg#icon-instagram.svg"
                         ></use>
                       </svg>
                     </a>
@@ -272,21 +270,21 @@
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-twitter.svg"></use>
+                        <use href="./images/icons.svg#icon-twitter.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-facebook.svg"></use>
+                        <use href="./images/icons.svg#icon-facebook.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-linkedin.svg"></use>
+                        <use href="./images/icons.svg#icon-linkedin.svg"></use>
                       </svg>
                     </a>
                   </li>
@@ -309,7 +307,7 @@
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
                         <use
-                          href="./img-svg/icons.svg#icon-instagram.svg"
+                          href="./images/icons.svg#icon-instagram.svg"
                         ></use>
                       </svg>
                     </a>
@@ -317,21 +315,21 @@
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-twitter.svg"></use>
+                        <use href="./images/icons.svg#icon-twitter.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-facebook.svg"></use>
+                        <use href="./images/icons.svg#icon-facebook.svg"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team__soc-item">
                     <a href="" class="team__soc-link list">
                       <svg class="team__soc-icon" width="20" height="20">
-                        <use href="./img-svg/icons.svg#icon-linkedin.svg"></use>
+                        <use href="./images/icons.svg#icon-linkedin.svg"></use>
                       </svg>
                     </a>
                   </li>
@@ -349,42 +347,42 @@
             <li class="company__item">
               <a href="" class="company__link">
                 <svg class="company__icon" width="106" height="60">
-                  <use href="./img-svg/icons.svg#company1.svg"></use>
+                  <use href="./images/icons.svg#company1.svg"></use>
                 </svg>
               </a>
             </li>
             <li class="company__item">
               <a href="" class="company__link">
                 <svg class="company__icon" width="106" height="60">
-                  <use href="./img-svg/icons.svg#company2.svg"></use>
+                  <use href="./images/icons.svg#company2.svg"></use>
                 </svg>
               </a>
             </li>
             <li class="company__item">
               <a href="" class="company__link">
                 <svg class="company__icon" width="106" height="60">
-                  <use href="./img-svg/icons.svg#company3.svg"></use>
+                  <use href="./images/icons.svg#company3.svg"></use>
                 </svg>
               </a>
             </li>
             <li class="company__item">
               <a href="" class="company__link">
                 <svg class="company__icon" width="106" height="60">
-                  <use href="./img-svg/icons.svg#company4.svg"></use>
+                  <use href="./images/icons.svg#company4.svg"></use>
                 </svg>
               </a>
             </li>
             <li class="company__item">
               <a href="" class="company__link">
                 <svg class="company__icon" width="106" height="60">
-                  <use href="./img-svg/icons.svg#company5.svg"></use>
+                  <use href="./images/icons.svg#company5.svg"></use>
                 </svg>
               </a>
             </li>
             <li class="company__item">
               <a href="" class="company__link">
                 <svg class="company__icon" width="106" height="60">
-                  <use href="./img-svg/icons.svg#company6.svg"></use>
+                  <use href="./images/icons.svg#company6.svg"></use>
                 </svg>
               </a>
             </li>
@@ -400,7 +398,7 @@
             <a href="./index.html" class="footer__logo link">
               <span class="footer__logo-web">Web</span>Studio
             </a>
-            <address class="address">
+            <address class="address footer__address">
               <ul class="address__list list">
                 <li class="address__item">
                   <a
@@ -424,41 +422,41 @@
               </ul>
             </address>
           </div>
-          <div class="soc">
+          <div class="soc footer__soc">
             <p class="soc__title">Приєднуйтесь</p>
             <ul class="soc__list">
               <li class="soc__item">
                 <a href="" class="soc__link list">
                   <svg class="soc__icon" width="20" height="20">
-                    <use href="./img-svg/icons.svg#icon-instagram.svg"></use>
+                    <use href="./images/icons.svg#icon-instagram.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="soc__item">
                 <a href="" class="soc__link list">
                   <svg class="soc__icon" width="20" height="20">
-                    <use href="./img-svg/icons.svg#icon-twitter.svg"></use>
+                    <use href="./images/icons.svg#icon-twitter.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="soc__item">
                 <a href="" class="soc__link list">
                   <svg class="soc__icon" width="20" height="20">
-                    <use href="./img-svg/icons.svg#icon-facebook.svg"></use>
+                    <use href="./images/icons.svg#icon-facebook.svg"></use>
                   </svg>
                 </a>
               </li>
               <li class="soc__item">
                 <a href="" class="soc__link list">
                   <svg class="soc__icon" width="20" height="20">
-                    <use href="./img-svg/icons.svg#icon-linkedin.svg"></use>
+                    <use href="./images/icons.svg#icon-linkedin.svg"></use>
                   </svg>
                 </a>
               </li>
             </ul>
           </div>
           <!-- subscription -->
-          <div class="subscription">
+          <div class="subscription footer__subscription ">
             <p class="subscription__text">Підпишіться на розсилку</p>
             <form class="subscription__form">
               <input
@@ -470,7 +468,7 @@
               <button class="subscription__btn">
                 Підписатися
                 <svg class="subscription__svg">
-                  <use href="./img-svg/icons.svg#icon-send"></use>
+                  <use href="./images/icons.svg#icon-send"></use>
                 </svg>
               </button>
             </form>
@@ -483,7 +481,7 @@
       <div class="modal">
         <button type="button" class="modal__close" data-modal-close>
           <svg class="modal__close-icon" width="18" height="18">
-            <use href="./img-svg/icons.svg#symbol-defs.svg"></use>
+            <use href="./images/icons.svg#symbol-defs.svg"></use>
           </svg>
         </button>
         <p class="modal__title">Залиште свої дані, ми вам передзвонимо</p>
@@ -498,7 +496,7 @@
               id="user-name"
             />
             <svg class="modal__input-icon" width="18px" height="18">
-              <use href="./img-svg/icons.svg#icon-person.svg"></use>
+              <use href="./images/icons.svg#icon-person.svg"></use>
             </svg>
           </div>
           <label for="user-tell" class="modal__label"
@@ -513,7 +511,7 @@
               id="user-tell"
             />
             <svg class="modal__input-icon" width="18px" height="18">
-              <use href="./img-svg/icons.svg#icon-phone.svg"></use>
+              <use href="./images/icons.svg#icon-phone.svg"></use>
             </svg>
           </div>
           <label for="user-email" class="modal__label"><span>Пошта</span></label>
@@ -526,7 +524,7 @@
               id="user-email"
             />
             <svg class="modal__input-icon" width="18" height="18">
-              <use href="./img-svg/icons.svg#icon-email.svg"></use>
+              <use href="./images/icons.svg#icon-email.svg"></use>
             </svg>
           </div>
           <div class="modal-field">
@@ -550,7 +548,7 @@
             <label for="privacy" class="modal__check-text">
               <span>
                 <svg class="modal__check-icon" width="16" height="15">
-                  <use href="./img-svg/icons.svg#icon-check"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               <div>
